Text changes to HTML file
Text changes to HTML file

--- a/The Art of War.html
+++ b/The Art of War.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> The Art of War - Sun Tzu - Test </title>
+		<title> The Art of War - Sun Tzu - Testing changes </title>
 		<link href = "test_style.css" type="text/css" rel="stylesheet" />
 	</head>
 	<body>
